--- a/DecisionTree(1).ipynb
+++ b/DecisionTree(1).ipynb
@@ -4431,11 +4431,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "cProfile provide deterministic profiling of Python programs. A profile is a set of statistics that describes how often and for how long various parts of the program executed. These statistics can be formatted into reports via the pstats module."
+   ]
   },
   {
    "cell_type": "code",
@@ -4525,6 +4525,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The first line indicates that 279927 calls were monitored. Of those calls,279867 were primitive, meaning that the call was not induced via recursion. The next line: Ordered by: cumulative name, indicates that the text string in the far right column was used to sort the output. The column headings include:\n",
+    "\n",
+    "**ncalls**\n",
+    "\n",
+    "    for the number of calls.\n",
+    "**tottime**\n",
+    "\n",
+    "    for the total time spent in the given function (and excluding time made in calls to sub-functions)\n",
+    "**percall**\n",
+    "\n",
+    "    is the quotient of tottime divided by ncalls\n",
+    "**cumtime**\n",
+    "\n",
+    "    is the cumulative time spent in this and all subfunctions (from invocation till exit). This figure is accurate even for recursive functions.\n",
+    "**percall**\n",
+    "\n",
+    "    is the quotient of cumtime divided by primitive calls\n",
+    "    \n",
+    "**filename:lineno(function)**\n",
+    "\n",
+    "    provides the respective data of each function\n",
+    "\n",
+    "When there are two numbers in the first column (for example 3/1), it means that the function recursed. The second value is the number of primitive calls and the former is the total number of calls. Note that when the function does not recurse, these two values are the same, and only the single figure is printed.\n",
+    "\n",
+    "Instead of printing the output at the end of the profile run, we can save the results to a file by specifying a filename to the run() function:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 217,
    "metadata": {},
@@ -4603,7 +4634,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Print(\"Hi\")"
+   ]
   }
  ],
  "metadata": {
