--- a/DecisionTree(1).ipynb
+++ b/DecisionTree(1).ipynb
@@ -5058,16 +5058,16 @@
     "        self.best_params_ = best_params\n",
     "        self.best_score_ = best_score\n",
     "    \n",
-    "    def _get_param_combinations(self):\n",
+    "    def get_param_combinations(self):\n",
     "        keys, values = zip(*self.param_grid.items())\n",
     "        for value_combination in itertools.product(*values):\n",
     "            yield dict(zip(keys, value_combination))\n",
     "    \n",
-    "    def _get_cv_indices(self, X):\n",
+    "    def get_cv_indices(self, X):\n",
     "        kf = KFoldCV(n_splits=self.cv, shuffle=True)\n",
     "        return kf.split(X)\n",
     "    \n",
-    "    def _score(self, X, y):\n",
+    "    def score(self, X, y):\n",
     "    \n",
     "    # Make predictions on the input data\n",
     "        y_pred = self.model.predict(X_test)\n",
@@ -5211,7 +5211,7 @@
     "    dt = Decision_Tree_Regressor()\n",
     "    gs = GridSearchCV(dt,param_grid)\n",
     "    gs.fit(X,y)\n",
-    "    return gs.best_params_\n"
+    "    return gs.best_params , gs.best_score\n"
    ]
   },
   {
@@ -5244,22 +5244,70 @@
     }
    ],
    "source": [
-    "pipeline(df)"
+    "pipeline(df)\n",
+    "print('Best Score is' : pipeline(df))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Best "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (29405111.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_5242/29405111.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print('{'max_depth': 5, 'splitter': 'var_red'}')\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('{'max_depth': 5, 'splitter': 'var_red'}')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "d = {'max_depth': 5, 'splitter': 'var_red'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'max_depth': 5, 'splitter': 'var_red'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The best Parameters for Decison Tree are:\n",
+    "\n",
+    "Max_depth = 5\n",
+    "Criteria = Variance reduction"
+   ]
   }
  ],
  "metadata": {
